--- a/OOO_Part2/yahtzee/src/application/application.css
+++ b/OOO_Part2/yahtzee/src/application/application.css
@@ -1,1 +1,37 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+ .game-label{
+ 	-fx-background-color: #FFFFFF;
+ 	-fx-font: 25.0px Tahoma;
+ 	-fx-font-weight: bold;
+ 	-fx-alignment: center;
+ 	-fx-min-height: 50.0;
+ 	-fx-min-width: 900.0;
+ }
+ 
+ .player-label{
+ 	-fx-background-color: #FFFFFF;
+ 	-fx-font: 20.0px Tahoma;
+ 	-fx-alignment: center;
+ 	-fx-min-height: 50.0;
+ 	-fx-min-width: 900.0;
+ }
+ 
+ .observe-label{
+ 	-fx-font: 15.0px Tahoma;
+ 	-fx-alignment: center;
+ 	-fx-min-height: 50.0;
+ 	-fx-min-width: 900.0;
+ }
+ 
+ .dice-button{
+    -fx-background-color: transparent;
+    -fx-border-style: none;
+    -fx-border-width: 0.0;
+    -fx-border-insets: 0.0;
+ }
+ 
+ .dice-images{
+ 	-fx-alignment: center;
+ 	-fx-padding: 10.0;
+ }
+ 
