--- a/OOO_Part2/yahtzee/src/application/application.css
+++ b/OOO_Part2/yahtzee/src/application/application.css
@@ -42,5 +42,21 @@
  .playfield{
  	-fx-alignment: center;
  	-fx-padding: 10.0;
+ 	-fx-pref-width: 800;
  }
+ 
+ .dicefield{
+ 	-fx-alignment: center;
+ 	-fx-padding: 10.0;
+ 	-fx-pref-width: 400;
+ }
+ 
+ .table{
+ 	-fx-pref-width: 400;
+ 	-fx-padding: 20.0;
+ }
+ 
+ .score-column {
+ 	-fx-min-width: 10em;  
+}
  
