--- a/OOO_Part2/yahtzee/src/application/application.css
+++ b/OOO_Part2/yahtzee/src/application/application.css
@@ -1,4 +1,3 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
  .game-label{
  	-fx-font: 25.0px Tahoma;
  	-fx-font-weight: bold;
@@ -24,10 +23,25 @@
     -fx-border-insets: 0.0;
  }
  
+ .points-vbox{
+ 	-fx-alignment: top-center;
+ 	-fx-padding: 15 0 0 0;
+ }
+ 
+ .start-screen-hbox{
+ 	-fx-alignment: center; 	    
+ 	-fx-min-height: 50;
+ }
+ 
+ .start-screen-vbox{
+ 	-fx-alignment:top-center;
+ }
+ 
  .top-bottom-hbox{
  	-fx-background-color: #FFFFFF;
  	-fx-alignment: center; 	    
  	-fx-padding: 10;
+ 	-fx-min-height: 50;
  }
  
  .dice-images{
@@ -44,5 +58,9 @@
  .table{
  	-fx-pref-width: 400;
  	-fx-padding: 20.0;
+ }
+ 
+ .score-column{
+ 	-fx-alignment:center;
  }
  
